<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="15dp"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:ems="10"
        android:hint="@string/dialog_title"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etTitle"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/date"
        android:inputType="date"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/etTime"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/etDate"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/time"
        android:inputType="time"
        android:textAlignment="center" />

    <Spinner
        android:id="@+id/prioritySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:entries="@array/priority_array"
        android:layout_below="@+id/etDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/priority"
        android:textStyle="bold"
        android:layout_below="@+id/etDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/etTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/prioritySpinner"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/dialog_title_task"
        android:inputType="textPersonName" />

</RelativeLayout>